fix: reculate schema on schema change & visible row count on update

--- a/src/Grid/Loader/loader.scss
+++ b/src/Grid/Loader/loader.scss
@@ -24,10 +24,9 @@
     background: #f6f7f8;
     background-image: linear-gradient(
       to right,
-      #f6f7f8 0%,
-      #edeef1 20%,
-      #f6f7f8 40%,
-      #f6f7f8 100%
+      #eeeeee 8%,
+      #dddddd 18%,
+      #eeeeee 33%
     );
     background-repeat: no-repeat;
     background-size: 800px 104px;
